gen/ru/hivesqlplugin/parser/HiveSQLParser.java
// This is a generated file. Not intended for manual editing.
package ru.hivesqlplugin.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static ru.hivesqlplugin.psi.HiveSQLTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class HiveSQLParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    if (t == ALTER_DATABASE) {
      r = alter_database(b, 0);
    }
    else if (t == ARRAY_TYPE) {
      r = array_type(b, 0);
    }
    else if (t == BOOLEAN_EXPRESSION) {
      r = boolean_expression(b, 0);
    }
    else if (t == COMMON_TABLE_EXPRESSION) {
      r = common_table_expression(b, 0);
    }
    else if (t == COMMON_TABLE_EXPRESSION_LIST) {
      r = common_table_expression_list(b, 0);
    }
    else if (t == CONSTRAINT_SPECIFICATION) {
      r = constraint_specification(b, 0);
    }
    else if (t == CREATE_DATABASE) {
      r = create_database(b, 0);
    }
    else if (t == CREATE_TABLE) {
      r = create_table(b, 0);
    }
    else if (t == DATA_TYPE) {
      r = data_type(b, 0);
    }
    else if (t == DDL) {
      r = ddl(b, 0);
    }
    else if (t == DELETE_STATEMENT) {
      r = delete_statement(b, 0);
    }
    else if (t == DML) {
      r = dml(b, 0);
    }
    else if (t == DROP_DATABASE) {
      r = drop_database(b, 0);
    }
    else if (t == DROP_TABLE) {
      r = drop_table(b, 0);
    }
    else if (t == FILE_FORMAT) {
      r = file_format(b, 0);
    }
    else if (t == FROM_STATEMENT) {
      r = from_statement(b, 0);
    }
    else if (t == INSERT_STATEMENT) {
      r = insert_statement(b, 0);
    }
    else if (t == LOAD_DATA) {
      r = load_data(b, 0);
    }
    else if (t == MAP_TYPE) {
      r = map_type(b, 0);
    }
    else if (t == MERGE_STATEMENT) {
      r = merge_statement(b, 0);
    }
    else if (t == PARTITION_COLUMN) {
      r = partition_column(b, 0);
    }
    else if (t == PRIMITIVE_TYPE) {
      r = primitive_type(b, 0);
    }
    else if (t == QUERY) {
      r = query(b, 0);
    }
    else if (t == ROW_FORMAT) {
      r = row_format(b, 0);
    }
    else if (t == SELECT_EXPR) {
      r = select_expr(b, 0);
    }
    else if (t == SELECT_EXPR_LIST) {
      r = select_expr_list(b, 0);
    }
    else if (t == SELECT_STATEMENT) {
      r = select_statement(b, 0);
    }
    else if (t == SET_CLAUSE_LIST) {
      r = set_clause_list(b, 0);
    }
    else if (t == STRUCT_TYPE) {
      r = struct_type(b, 0);
    }
    else if (t == TRUNCATE_TABLE) {
      r = truncate_table(b, 0);
    }
    else if (t == UNION_TYPE) {
      r = union_type(b, 0);
    }
    else if (t == UPDATE_STATEMENT) {
      r = update_statement(b, 0);
    }
    else if (t == USE_STATEMENT) {
      r = use_statement(b, 0);
    }
    else {
      r = parse_root_(t, b, 0);
    }
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return hsqlFile(b, l + 1);
  }

  /* ********************************************************** */
  // ALTER (DATABASE|SCHEMA) database_name SET DBPROPERTIES db_properties |
  //     ALTER (DATABASE|SCHEMA) database_name SET OWNER [USER|ROLE] user_or_role |
  //     ALTER (DATABASE|SCHEMA) database_name SET LOCATION hdfs_path
  public static boolean alter_database(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alter_database")) return false;
    if (!nextTokenIs(b, ALTER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = alter_database_0(b, l + 1);
    if (!r) r = alter_database_1(b, l + 1);
    if (!r) r = alter_database_2(b, l + 1);
    exit_section_(b, m, ALTER_DATABASE, r);
    return r;
  }

  // ALTER (DATABASE|SCHEMA) database_name SET DBPROPERTIES db_properties
  private static boolean alter_database_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alter_database_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ALTER);
    r = r && alter_database_0_1(b, l + 1);
    r = r && database_name(b, l + 1);
    r = r && consumeTokens(b, 0, SET, DBPROPERTIES);
    r = r && db_properties(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // DATABASE|SCHEMA
  private static boolean alter_database_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alter_database_0_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DATABASE);
    if (!r) r = consumeToken(b, SCHEMA);
    exit_section_(b, m, null, r);
    return r;
  }

  // ALTER (DATABASE|SCHEMA) database_name SET OWNER [USER|ROLE] user_or_role
  private static boolean alter_database_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alter_database_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ALTER);
    r = r && alter_database_1_1(b, l + 1);
    r = r && database_name(b, l + 1);
    r = r && consumeTokens(b, 0, SET, OWNER);
    r = r && alter_database_1_5(b, l + 1);
    r = r && user_or_role(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // DATABASE|SCHEMA
  private static boolean alter_database_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alter_database_1_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DATABASE);
    if (!r) r = consumeToken(b, SCHEMA);
    exit_section_(b, m, null, r);
    return r;
  }

  // [USER|ROLE]
  private static boolean alter_database_1_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alter_database_1_5")) return false;
    alter_database_1_5_0(b, l + 1);
    return true;
  }

  // USER|ROLE
  private static boolean alter_database_1_5_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alter_database_1_5_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, USER);
    if (!r) r = consumeToken(b, ROLE);
    exit_section_(b, m, null, r);
    return r;
  }

  // ALTER (DATABASE|SCHEMA) database_name SET LOCATION hdfs_path
  private static boolean alter_database_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alter_database_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ALTER);
    r = r && alter_database_2_1(b, l + 1);
    r = r && database_name(b, l + 1);
    r = r && consumeTokens(b, 0, SET, LOCATION);
    r = r && hdfs_path(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // DATABASE|SCHEMA
  private static boolean alter_database_2_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alter_database_2_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DATABASE);
    if (!r) r = consumeToken(b, SCHEMA);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ARRAY '<'data_type'>'
  public static boolean array_type(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_type")) return false;
    if (!nextTokenIs(b, ARRAY)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ARRAY);
    r = r && consumeToken(b, "<");
    r = r && data_type(b, l + 1);
    r = r && consumeToken(b, ">");
    exit_section_(b, m, ARRAY_TYPE, r);
    return r;
  }

  /* ********************************************************** */
  // EXPR
  public static boolean boolean_expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "boolean_expression")) return false;
    if (!nextTokenIs(b, EXPR)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, EXPR);
    exit_section_(b, m, BOOLEAN_EXPRESSION, r);
    return r;
  }

  /* ********************************************************** */
  // singlequotedstring
  static boolean col_comment(PsiBuilder b, int l) {
    return consumeToken(b, SINGLEQUOTEDSTRING);
  }

  /* ********************************************************** */
  // identifier
  static boolean col_name(PsiBuilder b, int l) {
    return consumeToken(b, IDENTIFIER);
  }

  /* ********************************************************** */
  // col_name (',' col_name)
  static boolean columns_list(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "columns_list")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = col_name(b, l + 1);
    r = r && columns_list_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ',' col_name
  private static boolean columns_list_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "columns_list_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ",");
    r = r && col_name(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // col_name data_type [COMMENT col_comment](',' col_name data_type [COMMENT col_comment])*
  static boolean columns_list_with_types_and_opt_comments(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "columns_list_with_types_and_opt_comments")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = col_name(b, l + 1);
    r = r && data_type(b, l + 1);
    r = r && columns_list_with_types_and_opt_comments_2(b, l + 1);
    r = r && columns_list_with_types_and_opt_comments_3(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // [COMMENT col_comment]
  private static boolean columns_list_with_types_and_opt_comments_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "columns_list_with_types_and_opt_comments_2")) return false;
    columns_list_with_types_and_opt_comments_2_0(b, l + 1);
    return true;
  }

  // COMMENT col_comment
  private static boolean columns_list_with_types_and_opt_comments_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "columns_list_with_types_and_opt_comments_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMENT);
    r = r && col_comment(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (',' col_name data_type [COMMENT col_comment])*
  private static boolean columns_list_with_types_and_opt_comments_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "columns_list_with_types_and_opt_comments_3")) return false;
    int c = current_position_(b);
    while (true) {
      if (!columns_list_with_types_and_opt_comments_3_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "columns_list_with_types_and_opt_comments_3", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // ',' col_name data_type [COMMENT col_comment]
  private static boolean columns_list_with_types_and_opt_comments_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "columns_list_with_types_and_opt_comments_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ",");
    r = r && col_name(b, l + 1);
    r = r && data_type(b, l + 1);
    r = r && columns_list_with_types_and_opt_comments_3_0_3(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // [COMMENT col_comment]
  private static boolean columns_list_with_types_and_opt_comments_3_0_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "columns_list_with_types_and_opt_comments_3_0_3")) return false;
    columns_list_with_types_and_opt_comments_3_0_3_0(b, l + 1);
    return true;
  }

  // COMMENT col_comment
  private static boolean columns_list_with_types_and_opt_comments_3_0_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "columns_list_with_types_and_opt_comments_3_0_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMENT);
    r = r && col_comment(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // STUB
  public static boolean common_table_expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "common_table_expression")) return false;
    if (!nextTokenIs(b, STUB)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, STUB);
    exit_section_(b, m, COMMON_TABLE_EXPRESSION, r);
    return r;
  }

  /* ********************************************************** */
  // common_table_expression (',' common_table_expression)*
  public static boolean common_table_expression_list(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "common_table_expression_list")) return false;
    if (!nextTokenIs(b, STUB)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = common_table_expression(b, l + 1);
    r = r && common_table_expression_list_1(b, l + 1);
    exit_section_(b, m, COMMON_TABLE_EXPRESSION_LIST, r);
    return r;
  }

  // (',' common_table_expression)*
  private static boolean common_table_expression_list_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "common_table_expression_list_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!common_table_expression_list_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "common_table_expression_list_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // ',' common_table_expression
  private static boolean common_table_expression_list_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "common_table_expression_list_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ",");
    r = r && common_table_expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // identifier
  static boolean constraint_name(PsiBuilder b, int l) {
    return consumeToken(b, IDENTIFIER);
  }

  /* ********************************************************** */
  // [',' PRIMARY KEY (columns_list) DISABLE NOVALIDATE ]
  //                              [',' CONSTRAINT constraint_name FOREIGN KEY (columns_list) REFERENCES table_name(columns_list) DISABLE NOVALIDATE]
  public static boolean constraint_specification(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constraint_specification")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONSTRAINT_SPECIFICATION, "<constraint specification>");
    r = constraint_specification_0(b, l + 1);
    r = r && constraint_specification_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // [',' PRIMARY KEY (columns_list) DISABLE NOVALIDATE ]
  private static boolean constraint_specification_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constraint_specification_0")) return false;
    constraint_specification_0_0(b, l + 1);
    return true;
  }

  // ',' PRIMARY KEY (columns_list) DISABLE NOVALIDATE
  private static boolean constraint_specification_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constraint_specification_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ",");
    r = r && consumeTokens(b, 0, PRIMARY, KEY);
    r = r && constraint_specification_0_0_3(b, l + 1);
    r = r && consumeTokens(b, 0, DISABLE, NOVALIDATE);
    exit_section_(b, m, null, r);
    return r;
  }

  // (columns_list)
  private static boolean constraint_specification_0_0_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constraint_specification_0_0_3")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = columns_list(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // [',' CONSTRAINT constraint_name FOREIGN KEY (columns_list) REFERENCES table_name(columns_list) DISABLE NOVALIDATE]
  private static boolean constraint_specification_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constraint_specification_1")) return false;
    constraint_specification_1_0(b, l + 1);
    return true;
  }

  // ',' CONSTRAINT constraint_name FOREIGN KEY (columns_list) REFERENCES table_name(columns_list) DISABLE NOVALIDATE
  private static boolean constraint_specification_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constraint_specification_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ",");
    r = r && consumeToken(b, CONSTRAINT);
    r = r && constraint_name(b, l + 1);
    r = r && consumeTokens(b, 0, FOREIGN, KEY);
    r = r && constraint_specification_1_0_5(b, l + 1);
    r = r && consumeToken(b, REFERENCES);
    r = r && table_name(b, l + 1);
    r = r && constraint_specification_1_0_8(b, l + 1);
    r = r && consumeTokens(b, 0, DISABLE, NOVALIDATE);
    exit_section_(b, m, null, r);
    return r;
  }

  // (columns_list)
  private static boolean constraint_specification_1_0_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constraint_specification_1_0_5")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = columns_list(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (columns_list)
  private static boolean constraint_specification_1_0_8(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constraint_specification_1_0_8")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = columns_list(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // CREATE (DATABASE|SCHEMA) [IF NOT EXISTS] database_name
  //                       [COMMENT database_comment]
  //                       [LOCATION hdfs_path]
  //                       [WITH DBPROPERTIES db_properties]
  public static boolean create_database(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "create_database")) return false;
    if (!nextTokenIs(b, CREATE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, CREATE);
    r = r && create_database_1(b, l + 1);
    r = r && create_database_2(b, l + 1);
    r = r && database_name(b, l + 1);
    r = r && create_database_4(b, l + 1);
    r = r && create_database_5(b, l + 1);
    r = r && create_database_6(b, l + 1);
    exit_section_(b, m, CREATE_DATABASE, r);
    return r;
  }

  // DATABASE|SCHEMA
  private static boolean create_database_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "create_database_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DATABASE);
    if (!r) r = consumeToken(b, SCHEMA);
    exit_section_(b, m, null, r);
    return r;
  }

  // [IF NOT EXISTS]
  private static boolean create_database_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "create_database_2")) return false;
    parseTokens(b, 0, IF, NOT, EXISTS);
    return true;
  }

  // [COMMENT database_comment]
  private static boolean create_database_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "create_database_4")) return false;
    create_database_4_0(b, l + 1);
    return true;
  }

  // COMMENT database_comment
  private static boolean create_database_4_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "create_database_4_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMENT);
    r = r && database_comment(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // [LOCATION hdfs_path]
  private static boolean create_database_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "create_database_5")) return false;
    create_database_5_0(b, l + 1);
    return true;
  }

  // LOCATION hdfs_path
  private static boolean create_database_5_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "create_database_5_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LOCATION);
    r = r && hdfs_path(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // [WITH DBPROPERTIES db_properties]
  private static boolean create_database_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "create_database_6")) return false;
    create_database_6_0(b, l + 1);
    return true;
  }

  // WITH DBPROPERTIES db_properties
  private static boolean create_database_6_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "create_database_6_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, WITH, DBPROPERTIES);
    r = r && db_properties(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // CREATE [TEMPORARY] [EXTERNAL] TABLE [IF NOT EXISTS] [database_name'.']table_name
  //                    [(columns_list_with_types_and_opt_comments [constraint_specification])]
  //                    [COMMENT table_comment]
  //                    [PARTITIONED BY (columns_list_with_types_and_opt_comments)]
  //                    [CLUSTERED BY (columns_list) [SORTED BY (col_name [ASC|DESC] (',' col_name [ASC|DESC])+ )] INTO num_buckets BUCKETS]
  //                    [SKEWED BY (columns_list)
  //                       ON ((columns_list) (',' (columns_list))+ )
  //                       [STORED AS DIRECTORIES]
  //                    ]
  //                    [
  //                       ROW FORMAT row_format
  //                       | STORED AS file_format
  //                       | ROW FORMAT row_format STORED AS file_format
  //                       | STORED BY 'storage.handler.class.name' [WITH SERDEPROPERTIES (serde_properties)]
  //                    ]
  //                    [LOCATION hdfs_path]
  //                    [TBLPROPERTIES (table_properties)]
  //                    [AS select_statement]
  //                  | CREATE [TEMPORARY] [EXTERNAL] TABLE [IF NOT EXISTS] [database_name'.']table_name
  //                    LIKE existing_table_or_view_name
  //                    [LOCATION hdfs_path]
  public static boolean create_table(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "create_table")) return false;
    if (!nextTokenIs(b, CREATE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = create_table_0(b, l + 1);
    if (!r) r = create_table_1(b, l + 1);
    exit_section_(b, m, CREATE_TABLE, r);
    return r;
  }
